--- a/WebApplication9/WebApplication9.csproj
+++ b/WebApplication9/WebApplication9.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="Dapper" Version="2.1.35" />
       <PackageReference Include="FluentMigrator" Version="5.1.0" />
       <PackageReference Include="FluentMigrator.Runner" Version="5.1.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.3" />
       <PackageReference Include="Npgsql" Version="8.0.2" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
       <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
