--- a/WebApplication9/appsettings.json
+++ b/WebApplication9/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Database": "Server=127.0.0.1:5431;User id=admin;Password=admin;Database=production"
+    "Database": "Host=database;Port=5432;User id=admin;Password=admin;Database=production"
   }
 }
