--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,16 +3,40 @@ services:
   database:
     image: postgres:16
     restart: always
-    environment:                  # это перменные окружения для базы данных (штуки которые читает база данных прежде чем запуститься) их можно менять 
-      POSTGRES_USER: 'admin'      # это имя юзера, для подключения к базе, его можно поменять на любое другое 
-      POSTGRES_PASSWORD: 'admin'  # это пароль, для подключения к базе, его можно поменять на любой другое
-      POSTGRES_DB: 'production'   # это имя базы данных которая создаться при запуске базы, его можно поменять
+    environment:
+      POSTGRES_USER: 'admin'
+      POSTGRES_PASSWORD: 'admin'
+      POSTGRES_DB: 'production'
     networks:
       - backend
     ports:
-      - "5431:5432"               # База данных будет подниматься на порту 5431, лучше это не трогайте 
+      - "5432:5432"
     volumes:
       - database-pg:/var/lib/postgresql/data
+  
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    networks:
+      - backend
+    ports:
+      - "8082:8080"
+    depends_on:
+      - database
+    restart: always
+  
+  nginx:
+    image: 'jc21/nginx-proxy-manager:latest'
+    restart: unless-stopped
+    ports:
+      - '80:80'
+      - '443:443'
+      - '81:81'
+    
+    volumes:
+      - ./data:/data
+      - ./letsencrypt:/etc/letsencrypt
 
 networks:
   backend:
